[tool.poetry]
name = "data-env"
version = "0.1.0"
description = ""
authors = ["shyn_le <highlandetspirou2812@gmail.com>"]
readme = "README.md"
packages = [{include = "data_env"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.9"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
